--- a/osa0/0.5_single_page_app.md
+++ b/osa0/0.5_single_page_app.md
@@ -3,15 +3,8 @@
 sequenceDiagram
     participant browser
     participant server
-    
-    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
-    activate server
-    server-->>browser: HTTP status code 302: redirect to https://studies.cs.helsinki.fi/exampleapp/notes
-    deactivate server
 
-    Note right of browser: Browser reloads the page
-
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
     activate server
     server-->>browser: HTML document
     deactivate server
@@ -21,7 +14,7 @@ sequenceDiagram
     server-->>browser: the css file
     deactivate server
     
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+    browser->>server: GET studies.cs.helsinki.fi/exampleapp/spa.js
     activate server
     server-->>browser: the JavaScript file
     deactivate server
